# BERDL_JupyterHub

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
berdlhub/api_utils/: governance_utils.py  spark_utils.py
berdlhub/auth/: kb_auth.py  kb_jupyterhub_auth.py
berdlhub/auth/templates/: access-request-submitted.html  access-request.html  admin-access-requests.html  login.html  mfa-required.html  page.html
berdlhub/config/: 0-jupyterhub_config.py  auth.py  debug.py  environment.py  hooks.py  hub.py  profiles.py  services.py  spark_connect_service.py  spawner.py  storage.py  validators.py
berdlhub/static/: kbase-theme.css
docs/: notebook-image-config.md
local_dev/: README.md  configmap.yaml  external-image-config-example.md  hub.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
unit_tests/: test_hooks.py
unit_tests/api_utils/: test_governance_utils_test.py  test_spark_utils_test.py
unit_tests/auth/: test_kb_jupyterhub_auth.py
unit_tests/config/: test_profiles.py  test_storage.py  test_validators.py
